--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,5 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
@@ -16,6 +17,7 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -23,6 +25,27 @@ h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
+p{
+  line-height: 2;
+}
+
+hr{
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+a{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color:#EAF6F6;
+}
 .top-container {
   background-color: #E4F9F5;
   position: relative;
@@ -30,11 +53,12 @@ h3 {
 }
 
 .middle-container {
-
+margin: 100px 0;
 }
 
 .bottom-container {
-
+background-color: #66BFBF;
+padding: 50px 0 20px;
 }
 
 .pro {
@@ -43,14 +67,14 @@ h3 {
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
 .top-cloud {
   position: absolute;
-  right: 200px;
-  top: 50px;
+  right: 300px;
+  top: 40px;
 }
 
 
@@ -58,19 +82,22 @@ h3 {
 width: 50%;
 margin: 100px auto 100px auto;
 text-align: left;
-line-height: 2;
+
 }
 
 
 .code-img{
   width: 25%;
-
+  float: left;
+  margin-right: 30px;
 }
 
 .mom{
-  width: 30%;
-}
+  width: 27%;
+  float:right;
+  margin-left: 30px;
 
+}
 
 
 .footer-link{
